--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p id="subtitle">A List of all Contributers</p>
     <br>
     <p>FlareCO</p>    
+    <p>FlareNetwork</p>    
     <!--------- HOW DOES IT WORK ? ------------->
     <!--------- APPEND THIS WITH YOUR USERNAME <p>Username</p>  ----------->
   </div>  
